# rocketchat-2fa-check

./: LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg
docker/: Dockerfile
rocketchat_2fa_check/: __main__.py  checker.py  cli.py
