[tool.poetry]
name = "rocketchat-2fa-check"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <github@ulo.pe>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pymongo = "^3.8"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = {version = "^19.0",allows-prereleases = true}
isort = "^4.3"
flake8 = "^3.7"
flake8-bugbear = "^19.3"
flake8-tuple = "^0.3.1"
pylint = "^2.3"
mypy = "^0.701.0"
bpython = "^0.18.0"

[tool.poetry.scripts]
check-rc-2fa = 'rocketchat_2fa_check.__main__:_run_main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
